<?xml version="1.0"?>
<package format="2">
  <name>lynx_description</name>
  <version>0.0.0</version>
  <description>lynx_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yuweiwu20001@outlook.com">Yuwei Wu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
